Fix link z-index

--- a/index.css
+++ b/index.css
@@ -174,6 +174,7 @@ body {
 
 
 .nav__item__link svg {
+    z-index: 1;
     max-width: 40px;
     fill: url(#my-gradient);
 }
@@ -206,6 +207,7 @@ body {
 .gradient-border {
     position: absolute;
     inset: 0;
+    z-index: 0;
     border-radius: 50%;
 }
 
